Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.2.0-beta1
-
None
-
Linux
Description
Steps to reproduce:
- open/create simple project having ClangCodeModel enabled
- inside a function or wherever you like place some code that is illegal [I've just typed some characters to complete them, but canceled the ProposalWidget]
- wait until text is underlined with curly line and a text mark is displayed before the line number
- hit Shift+Del to remove the respective line
Current result:
- cmdline prints sth like
Could not find mark 0xf8d61e0 on line 195
Attachments
For Gerrit Dashboard: QTCREATORBUG-17270 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
177037,2 | Clang: Fix removing text marks on line deletion | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |